cmd/shared/libgogit.h

extern void GitFreeString(char* s);
extern char* GitRemoteFetch(long long remoteHandle, long long optsHandle);
extern char* GitRemotePush(long long remoteHandle, long long optsHandle);
extern char* GitRemoteList(long long remoteHandle, long long optsHandle, char** jsonOut);
extern char* GitRemoteConfigName(long long remoteHandle, char** nameOut);
extern void GitRemoteFree(long long remoteHandle);
extern char* GitPlainInit(char* path, int isBare, long long* handleOut);
extern char* GitPlainOpen(char* path, long long* handleOut);
extern char* GitPlainOpenWithOptions(char* path, long long optsHandle, long long* handleOut);
extern char* GitPlainClone(char* path, long long optsHandle, long long* handleOut);
extern char* GitRepositoryHead(long long repoHandle, char** refNameOut, char** hashOut);
extern char* GitRepositoryWorktree(long long repoHandle, long long* wtHandleOut);
extern char* GitRepositoryFetch(long long repoHandle, long long optsHandle);
extern char* GitRepositoryPush(long long repoHandle, long long optsHandle);
extern char* GitRepositoryLog(long long repoHandle, long long optsHandle, long long* iterOut);
extern char* GitRepositoryTags(long long repoHandle, long long* iterOut);
extern char* GitRepositoryBranches(long long repoHandle, long long* iterOut);
extern char* GitRepositoryNotes(long long repoHandle, long long* iterOut);
extern char* GitRepositoryReferences(long long repoHandle, long long* iterOut);
extern char* GitRepositoryReference(long long repoHandle, char* name, int resolved, char** refNameOut, char** hashOut);
extern char* GitRepositoryResolveRevision(long long repoHandle, char* rev, char** hashOut);
extern char* GitRepositoryCreateRemote(long long repoHandle, char* name, char* url, long long* handleOut);
extern char* GitRepositoryRemote(long long repoHandle, char* name, long long* handleOut);
extern char* GitRepositoryDeleteRemote(long long repoHandle, char* name);
extern char* GitRepositoryCreateBranch(long long repoHandle, char* name, char* hash);
extern char* GitRepositoryDeleteBranch(long long repoHandle, char* name);
extern char* GitRepositoryCreateTag(long long repoHandle, char* name, char* hash, long long optsHandle, char** refNameOut, char** hashOut);
extern char* GitRepositoryTag(long long repoHandle, char* name, char** refNameOut, char** hashOut);
extern char* GitRepositoryDeleteTag(long long repoHandle, char* name);
extern char* GitRepositoryCommitObject(long long repoHandle, char* hash, char** commitHashOut, char** msgOut, char** authorNameOut, char** authorEmailOut, long long* tsOut);
extern char* GitRepositoryMerge(long long repoHandle, char* refName, char* hash, long long optsHandle);
extern char* GitRepositoryRemotes(long long repoHandle, char** jsonOut);
extern void GitRepositoryFree(long long repoHandle);
extern char* GitSubmoduleInit(long long subHandle);
extern char* GitSubmoduleUpdate(long long subHandle, long long optsHandle);
extern char* GitSubmoduleRepository(long long subHandle, long long* handleOut);
extern char* GitSubmoduleConfigName(long long subHandle, char** nameOut);
extern void GitSubmoduleFree(long long subHandle);
extern char* GitWorktreeAdd(long long wtHandle, char* path, char** hashOut);
extern char* GitWorktreeAddWithOptions(long long wtHandle, long long optsHandle);
extern char* GitWorktreeAddGlob(long long wtHandle, char* pattern);
extern char* GitWorktreeCommit(long long wtHandle, char* msg, long long optsHandle, char** hashOut);
extern char* GitWorktreeCheckout(long long wtHandle, long long optsHandle);
extern char* GitWorktreePull(long long wtHandle, long long optsHandle);
extern char* GitWorktreeClean(long long wtHandle, long long optsHandle);
extern char* GitWorktreeMove(long long wtHandle, char* fromPath, char* toPath, char** hashOut);